# AI-Prices-Predictive-Model

./: .gitignore  API_DOCUMENTATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  app.py  pyproject.toml  requirements.txt  run.py  setup.sh  test_api.py  verify_setup.py
agri_price_suggester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: main.py  schemas.py
data/: demo_prices.csv  generate_data.py
ml/: features.py  model.py
model/: train_model.py
model/saved/: feature_columns.json  model_metrics.json
models/: model.joblib
scripts/: train.py
templates/: index.html
