[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-price-suggester"
version = "0.1.0"
description = "AI service to suggest prices for agriculture products"
authors = [{name = "FarmerAssist AI", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
